# fireflix

./: .gitignore  COPYING  Makefile.am  NEWS  NEWS.xml  autogen.sh  chrome.manifest  configure.ac  install.rdf.in  update-template.rdf.in  update.rdf.in
content/: Makefile.am  about.xul  autoconf.dtd.in  browser.xul  copying.xul  fireflix-panel.xul  fireflix.css  fireflix.js  flickr.js  generated-content.js  generated-content.xul  help.xml  md5.js  photoset-props.js  photoset-props.xul  util.js
locale/: Makefile.am
locale/en-US/: fireflix.dtd  fireflix.properties
